--- a/application/index/view/project/enroll.html
+++ b/application/index/view/project/enroll.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="http://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="/statics/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="/statics/css/common.css">
-	<link rel="stylesheet" type="text/css" href="/statics/css/project_enroll.css">
+	<link rel="stylesheet" type="text/css" href="/statics/css/project_enroll.css?v=1.0">
 	<script src="http://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
 	<script type="text/javascript" src="/statics/js/bootstrap.js"></script>
 	<script type="text/javascript" src="/statics/layer/layer.js"></script>
@@ -27,11 +27,10 @@
 	<div class="main">
 		<h3 class="more_title">联系方式</h3>
 		<ul class="enroll_ul">
-			<li><span class="enroll_ul_name">公司名称</span> <span class="enroll_ul_content">北京养殖有限公司</span></li>
-			<li><span class="enroll_ul_name">公司地址</span> <span class="enroll_ul_content">北京海东城区青龙胡同112号广业大厦B座</span></li>
-			<li><span class="enroll_ul_name">固定电话</span> <span class="enroll_ul_content">86-010-88244217</span></li>
-			<li><span class="enroll_ul_name">固定电话</span> <span class="enroll_ul_content">未提供</span></li>
-			<li><span class="enroll_ul_name">邮政编码</span> <span class="enroll_ul_content">100007</span></li>
+			<li><span class="enroll_ul_name">公司名称：</span> <span class="enroll_ul_content">武汉科泰农方管理咨询有限公司</span></li>
+			<li><span class="enroll_ul_name">公司地址：</span> <span class="enroll_ul_content">武汉江汉区发展大道176号兴城大厦B座10层</span></li>
+			<li><span class="enroll_ul_name">邮箱：</span> <span class="enroll_ul_content">reprosrs@126.com</span></li>
+			<li><span class="enroll_ul_name">电话：</span> <span class="enroll_ul_content">18771112399 &nbsp;&nbsp;&nbsp;&nbsp;15101107327</span></li>
 		</ul>
 
 		<h3 class="more_title">报名信息</h3>
