--- a/application/index/view/common/footer.html
+++ b/application/index/view/common/footer.html
@@ -1,9 +1,13 @@
 <footer>
-	<p>版权所有： 沈阳星擎科技有限公司</p>
+	<p>
+		公司名称：武汉科泰农方管理咨询有限公司 
+	 	&nbsp;&nbsp;&nbsp;&nbsp;公司地址：武汉江汉区发展大道176号兴城大厦B座10层 <br>
+	 	邮箱：jillzhu@yahoo.com &nbsp;&nbsp;&nbsp;&nbsp; 电话：鹿丽 15101107327，陈先生 18771112399
+	 </p>
 	<p>
 		<img class="footer_img" src="/statics/images/icons/beianbgs.png">
-		<span>备案号　鄂ICP备19019025号-1</span>
-		<span>联系电话：18771112399</span>
-	</p> 
+		<span>备案号　鄂ICP备19019025号-1 &nbsp;&nbsp;&nbsp;&nbsp;版权所有： 沈阳星擎科技有限公司</span>
+	</p>
+	<p></p>
 </footer>
 <script type="text/javascript" src="/statics/js/common.js"></script>
