--- a/application/index/view/common/footer.html
+++ b/application/index/view/common/footer.html
@@ -6,7 +6,7 @@
 	 </p>
 	<p>
 		<img class="footer_img" src="/statics/images/icons/beianbgs.png">
-		<span>备案号　鄂ICP备19019025号-1 &nbsp;&nbsp;&nbsp;&nbsp;版权所有： 沈阳星擎科技有限公司</span>
+		<span>备案号　鄂ICP备19019025号-1 &nbsp;&nbsp;&nbsp;&nbsp;技术支持： 沈阳星擎科技有限公司</span>
 	</p>
 	<p></p>
 </footer>
