--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -62,7 +62,7 @@
             <div class="index_content">
                 {foreach name="project" item="item" key="k"}
                 <div class="index_position index_flex index_article">
-                    <div class="index_l thumbImg"><img src="{$project[0]['thumbimage']}"></div>
+                    <div class="index_l thumbImg"><img src="{$item['thumbimage']}"></div>
                     <div class="index_r desc">
                         <div><a class="index_content_title" href="{:url('index/project/detail', array('id'=>$item['id']))}">{$item.title}</a></div>
                         <div class="index_content_div index_small">
